Add missing support for deep links on android

--- a/deepLinkTest.html
+++ b/deepLinkTest.html
@@ -7,17 +7,8 @@
     <title>lichess deep link test page</title>
   </head>
   <body>
-    <h1>lichess deep links using custom "lichess://" scheme</h1>
     <ul>
-      <li><a href="lichess://2360tJXP/black">lichess://2360tJXP/black</a></li>
-      <li><a href="lichess://2360tJXP">lichess://2360tJXP</a></li>
-      <li><a href="lichess://analyse/2360tJXP/black">lichess://analyse/2360tJXP/black</a></li>
-      <li><a href="lichess://analyse/2360tJXP">lichess://analyse/2360tJXP</a></li>
-      <li><a href="lichess://training/10880">lichess://training/10880</a></li>
-      <li><a href="lichess://challenge/V5pcCBXL">lichess://challenge/V5pcCBXL</a></li>
-    </ul>
-    <h1>lichess deep links using normal "https://" scheme</h1>
-    <ul>
+      <li><a href="https://lichess.org/2360tJXP/black">https://lichess.org/2360tJXP/black</a></li>
       <li><a href="https://lichess.org/analysis">https://lichess.org/analysis</a></li>
       <li><a href="https://lichess.org/analysis/1k6/1r6/2K5/Q7/8/8/8/8_w_-_-">https://lichess.org/analysis/1k6/1r6/2K5/Q7/8/8/8/8_w_-_-</a></li>
       <li><a href="https://lichess.org/editor">https://lichess.org/editor</a></li>
@@ -25,7 +16,6 @@
       <li><a href="https://lichess.org/inbox">https://lichess.org/inbox</a></li>
       <li><a href="https://lichess.org/inbox/new">https://lichess.org/inbox/new</a></li>
       <li><a href="https://lichess.org/player">https://lichess.org/player</a></li>
-      <li><a href="https://lichess.org/b9G5UVbM">https://lichess.org/b9G5UVbM</a></li>
       <li><a href="https://lichess.org/tournament/QsEkR4FO">https://lichess.org/tournament/QsEkR4FO</a></li>
       <li><a href="https://lichess.org/tournament">https://lichess.org/tournament</a></li>
       <li><a href="https://lichess.org/training/4760">https://lichess.org/training/4760</a></li>
@@ -34,7 +24,16 @@
       <li><a href="https://lichess.org/tv/bullet">https://lichess.org/tv/bullet</a></li>
       <li><a href="https://lichess.org/@/freefal">https://lichess.org/@/freefal</a></li>
       <li><a href="https://lichess.org/@/freefal/perf/bullet">https://lichess.org/@/freefal/perf/bullet</a></li>
+      <li><a href="https://lichess.org/study">Study</a></li>
+      <li><a href="https://lichess.org/study/ECVqHNdL">Study ID</a></li>
       <li>Create your own challenge to test it</li>
+    </ul>
+    <h2>Not supported links (should open in browser only)</h2>
+    <ul>
+      <li><a href="https://lichess.org/practice">Practice</a></li>
+      <li><a href="https://lichess.org/forum">Forum</a></li>
+      <li><a href="https://lichess.org/simul">Simul</a></li>
+      <li><a href="https://lichess.org/team">Team</a></li>
     </ul>
   </body>
 </html>
