Remove deep link support for user profile, add more links to test page
References #1564

--- a/deepLinkTest.html
+++ b/deepLinkTest.html
@@ -23,8 +23,6 @@
       <li><a href="https://lichess.org/training">https://lichess.org/training</a></li>
       <li><a href="https://lichess.org/tv">https://lichess.org/tv</a></li>
       <li><a href="https://lichess.org/tv/bullet">https://lichess.org/tv/bullet</a></li>
-      <li><a href="https://lichess.org/@/freefal">https://lichess.org/@/freefal</a></li>
-      <li><a href="https://lichess.org/@/freefal/perf/bullet">https://lichess.org/@/freefal/perf/bullet</a></li>
       <li><a href="https://lichess.org/study">Study</a></li>
       <li><a href="https://lichess.org/study/ECVqHNdL">Study ID</a></li>
       <li>Create your own challenge to test it</li>
@@ -35,6 +33,13 @@
       <li><a href="https://lichess.org/forum">Forum</a></li>
       <li><a href="https://lichess.org/simul">Simul</a></li>
       <li><a href="https://lichess.org/team">Team</a></li>
+      <li><a href="https://lichess.org/@/freefal">https://lichess.org/@/freefal</a></li>
+      <li><a href="https://lichess.org/@/freefal/perf/bullet">https://lichess.org/@/freefal/perf/bullet</a></li>
+      <li><a href="https://lichess.org/storm">Storm</a></li>
+      <li><a href="https://lichess.org/blog">Blog home</a></li>
+      <li><a href="https://lichess.org/blog/YCvy7xMAACIA8007/fat-fritz-2-is-a-rip-off">Blog post</a></li>
+      <li><a href="https://lichess.org/swiss">Swiss home</a></li>
+      <li><a href="https://lichess.org/swiss/xak7g4Go">Swiss tournament</a></li>
     </ul>
   </body>
 </html>
