--- a/deepLinkTest.html
+++ b/deepLinkTest.html
@@ -10,7 +10,11 @@
     <h1>Prod</h1>
     <ul>
       <li><a href="https://lichess.org/2360tJXP/black">https://lichess.org/2360tJXP/black</a></li>
-      <li><a href="https://lichess.org/analysis">https://lichess.org/analysis</a></li>
+      <li><a href="https://lichess.org/2360tJXP#50">https://lichess.org/2360tJXP#50</a></li>
+      <li><a href="https://lichess.org/2360tJXP/black#50">https://lichess.org/2360tJXP/black#50</a></li>
+      <li><a href="https://lichess.org/2360tJXP/black#50">https://lichess.org/2360tJXP/black#500</a></li>
+      <li><a href="https://lichess.org/2360tJXP/black#asdf">https://lichess.org/2360tJXP/black#asdf</a></li>
+      <li><a href="https://lichess.org/nalysis">https://lichess.org/analysis</a></li>
       <li><a href="https://lichess.org/analysis/rn1qkbnr/pppb1ppp/4p3/3p4/3PP3/2N2N2/PPP2PPP/R1BQKB1R_b_KQkq_-_0_1">https://lichess.org/analysis/rn1qkbnr/pppb1ppp/4p3/3p4/3PP3/2N2N2/PPP2PPP/R1BQKB1R_b_KQkq_-_0_1</a></li>
       <li><a href="https://lichess.org/editor">https://lichess.org/editor</a></li>
       <li><a href="https://lichess.org/editor/1k6/1r6/2K5/Q7/8/8/8/8_w_-_-">https://lichess.org/editor/1k6/1r6/2K5/Q7/8/8/8/8_w_-_-</a></li>
