Correct the route for study chapters
Chapter links from the website don't have /chapter/ in the URL. The app exports them correctly but does not recognize them.

--- a/deepLinkTest.html
+++ b/deepLinkTest.html
@@ -29,6 +29,7 @@
       <li><a href="https://lichess.org/tv/bullet">https://lichess.org/tv/bullet</a></li>
       <li><a href="https://lichess.org/study">Study</a></li>
       <li><a href="https://lichess.org/study/ECVqHNdL">Study ID</a></li>
+      <li><a href="https://lichess.org/study/ECVqHNdL/r6HubDaZ">Study chapter ID</a></li>
       <li>Create your own challenge to test it</li>
     </ul>
     <h2>Not supported links (should open in browser only)</h2>
